--- a/JQuery/index.html
+++ b/JQuery/index.html
@@ -4,12 +4,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>스타크래프트</title>
+    <style>
+        .background {
+            position: relative;
+            background-image: url('background.png');
+            background-size: 500px 330px;
+            width: 500px;
+            height: 330px;
+        }
+        #drone {
+            position: absolute;
+            width: 100px;
+            height: 100px;
+            top: 100px;
+            left: 60px;
+        }
+        #bunker {
+            position: absolute;
+            width: 150px;
+            height: 150px;
+            top: 80px;
+            right: 20px;
+        }
+        #spit {
+            display: none;
+            position: absolute;
+            top: 140px;
+            left: 150px;
+            width: 50px;
+            height: 30px;
+            z-index: 2;
+        }
+    </style>
 </head>
 <body>
+    <h1 id="hp">HP: 3</h1>
+    <div class='background'>
+        <img id="drone" src="drone.png" alt="drone">
+        <img id="spit" src="spit.png" alt="spit">
+        <img id="bunker" src="bunker.png" alt="bunker">
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script>
-        
+        let hp = 3;
+        $("#drone").click(() => {
+            $("#spit").fadeIn();
+            $("#spit").animate({
+                left: "+=250",
+            });
+            $("#spit").fadeOut(() => {
+                if (hp > 0) {
+                    --hp;
+                    $("#hp").text("HP: "+hp);
+                }
+                else {
+                    $("#bunker").fadeOut();
+                }
+            }); // fadeOut이 끝난 후 콜백함수 호출
+            $("#spit").css({
+                left: '150px',
+            });
+            // 총알이 발사되는 중에 hp 감소됨
+            // --hp;
+            // $("#hp").text("HP: "+hp);
+        })
     </script>
 </body>
 </html>
