--- a/basic_develop_activity/timetable.html
+++ b/basic_develop_activity/timetable.html
@@ -5,14 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Document</title>
+    <title>시간표 만들기</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        a {
+            text-decoration: none;
+            color: #000;
+        }
         ul {
             list-style: none;
             text-align: center;
+            margin-block-start: 0;
+            margin-block-end: 0;
+            margin-inline-start: 0;
+            margin-inline-end: 0;
+
         }
         header {
             table-layout: fixed;
+            text-align: center;
+        }
+        main {
+            display: flex;
+            align-items: flex-start;
+            flex-wrap: wrap;
         }
         article {
             margin: 20px auto;
@@ -29,21 +48,30 @@
         article.timetable {
             width: 600px;
         }
+        table > tbody > tr > td {
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <header class="d-table container-fluid">
-        <ul class="d-table-row">
-            <li class="d-table-cell">
-                <a href="">logo</a>
-            </li>
-            <li class="d-table-cell">
-                <h2>멋쟁이 사자</h3>
-            </li>
-            <li class="d-table-cell">
-                <p>박민선</p>
-            </li>
-        </ul>
+        <div class="d-table-cell logo-container">
+            <a href="">LOGO</a>
+        </div>
+        <nav class="d-table-cell">
+            <ul class="d-table">
+                <li class="d-table-cell">
+                    <a>HTML</a>
+                </li>
+                <li class="d-table-cell">
+                    <a>CSS</a>
+                </li>
+                <li class="d-table-cell">
+                    <a>JS</a>
+                </li>
+            </ul>
+        </nav>
+        <p class="d-table-cell">박민선</p>
     </header>
     <main>
         <article class="intro">
@@ -59,7 +87,7 @@
         <article class="timetable">
             <h1>나의 시간표</h1>
             <hr>
-            <table>
+            <table class="table table-bordered container">
                 <thead>
                     <tr>
                         <th>시간</th>
@@ -76,12 +104,12 @@
                     <tr>
                         <th>9:00-10:00</th>
                         <td>기상 및 밥먹기</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>기상 및 밥먹기</td>
+                        <td>기상 및 밥먹기</td>
+                        <td>기상 및 밥먹기</td>
+                        <td>기상 및 밥먹기</td>
+                        <td>기상 및 밥먹기</td>
+                        <td>기상 및 밥먹기</td>
                     </tr>
                     <tr>
                         <th>10:00-11:00</th>
@@ -167,5 +195,30 @@
             </table>
         </article>
     </main>
+    <script>
+        $(function() {
+            $("table tbody tr td").click(function(e) {
+                console.log(e.target);
+                if (e.target.className != "box-edit") {
+                    e.target.className = "box-edit";
+                    e.target.innerHTML = `<input type="text" onkeydown="Enter(this)" value="${e.target.innerHTML}"/>`;
+                }
+                else {
+                    let num1 = Math.floor(Math.random() * 256);
+                    let num2 = Math.floor(Math.random() * 256);
+                    let num3 = Math.floor(Math.random() * 256);
+                    e.target.style.backgroundColor = "rgb(" + num1 + "," + num2 + "," + num3 + ", 0.3)";
+                }
+            });
+        });
+
+        function Enter(e) {
+            if (event.keyCode == 13) {
+                console.log(e.parentNode.classList)
+                e.parentNode.className = "box";
+                e.parentNode.innerHTML = e.value;
+            }
+    }
+    </script>
 </body>
 </html>
