--- a/basic_develop_activity/timetable.html
+++ b/basic_develop_activity/timetable.html
@@ -195,6 +195,8 @@
             </table>
         </article>
     </main>
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script>
         $(function() {
             $("table tbody tr td").click(function(e) {
@@ -203,17 +205,21 @@
                     e.target.className = "box-edit";
                     e.target.innerHTML = `<input type="text" onkeydown="Enter(this)" value="${e.target.innerHTML}"/>`;
                 }
-                else {
-                    let num1 = Math.floor(Math.random() * 256);
-                    let num2 = Math.floor(Math.random() * 256);
-                    let num3 = Math.floor(Math.random() * 256);
-                    e.target.style.backgroundColor = "rgb(" + num1 + "," + num2 + "," + num3 + ", 0.3)";
-                }
+                // else {
+                //     let num1 = Math.floor(Math.random() * 256);
+                //     let num2 = Math.floor(Math.random() * 256);
+                //     let num3 = Math.floor(Math.random() * 256);
+                //     e.target.style.backgroundColor = "rgb(" + num1 + "," + num2 + "," + num3 + ", 0.3)";
+                // }
             });
         });
 
         function Enter(e) {
             if (event.keyCode == 13) {
+                let num1 = Math.floor(Math.random() * 256);
+                let num2 = Math.floor(Math.random() * 256);
+                let num3 = Math.floor(Math.random() * 256);
+                e.parentNode.style.backgroundColor = "rgb("+num1+","+num2+","+num3+", 0.3)";
                 console.log(e.parentNode.classList)
                 e.parentNode.className = "box";
                 e.parentNode.innerHTML = e.value;
