--- a/basic_develop_activity/timetable.html
+++ b/basic_develop_activity/timetable.html
@@ -5,63 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="timetable.css">
     <title>시간표 만들기</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        a {
-            text-decoration: none;
-            color: #000;
-        }
-        ul {
-            list-style: none;
-            text-align: center;
-            margin-block-start: 0;
-            margin-block-end: 0;
-            margin-inline-start: 0;
-            margin-inline-end: 0;
-
-        }
-        header {
-            table-layout: fixed;
-            text-align: center;
-        }
-        main {
-            display: flex;
-            align-items: flex-start;
-            flex-wrap: wrap;
-        }
-        article {
-            margin: 20px auto;
-        }
-        article.intro {
-            width: 500px;
-
-            padding: 10px;
-
-            border: 1px solid #737373;
-            border-radius: 20px;
-            box-shadow: 5px 5px 5px #737373;
-        }
-        article.timetable {
-            width: 600px;
-        }
-        table {
-            table-layout: fixed;
-        }
-        table > tbody > tr > td {
-            cursor: pointer;
-
-            vertical-align: center;
-        }
-        footer {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -127,8 +72,8 @@
             <p>mbti🧡 ISTP</p>
             <p>학교💛 한양대학교 ERICA캠퍼스</p>
             <p>학과💚 소프트웨어학부 컴퓨터전공</p>
-            <p>취미💙 혼자서 돌아다니기</p>
-            <p>좋아하는 음식💜 회, 스시, 카츠, 삼겹살, 양식, 국밥 등</p>
+            <p>취미💙 나들이 가기</p>
+            <p>좋아하는 음식💜 일식, 고기 등</p>
         </article>
         <article class="timetable">
             <h1>나의 시간표</h1>
